Feat : Ajout complet de l'emprunt d'une clé, avec la remise et l'ajout de l'emprunt
