# src/routes/key.routes.ts
@@ -9,6 +9,7 @@ export const keyRouter = (): Router => {
   router.get("/:id", keyController.getById);
   router.post("/create", keyController.createKey);
   router.patch("/:id/status", keyController.updateStatus);
+  router.patch("/rfid/:rfidUid/return", keyController.returnByRfid);
 
   return router;
 };
